--- a/tasks/task1/homework01_texts.ipynb
+++ b/tasks/task1/homework01_texts.ipynb
@@ -904,7 +904,7 @@
    "source": [
     "from collections import defaultdict\n",
     "def get_tf_idf(text, word_to_number, alpha=1):\n",
-    "    tf_idf_map = np.empty((0, len(word_to_number)), dtype=\"float32\")\n",
+    "    tf_map = np.empty((0, len(word_to_number)), dtype=\"float32\")\n",
     "    word_occurences = np.zeros(len(word_to_number), dtype=\"int32\")\n",
     "    word_occurences_dict = defaultdict(set)\n",
     "    for idx, line in enumerate(text):\n",
@@ -917,14 +917,14 @@
     "            except KeyError as e:\n",
     "                continue\n",
     "        tf_map_cur = np.array(list(map(lambda x: x / len(tf_map_cur), tf_map_cur)))\n",
-    "        tf_idf_map = np.vstack((tf_idf_map, tf_map_cur))\n",
+    "        tf_map = np.vstack((tf_map, tf_map_cur))\n",
     "    for word in word_occurences_dict.keys():\n",
     "        try:\n",
     "            word_occurences[word_to_number[word]] = len(word_occurences_dict[word])\n",
     "        except KeyError as e:\n",
     "            continue\n",
     "    idf_scores = np.array(list(map(lambda cnt: np.log(len(text) / (cnt + alpha)), word_occurences)))\n",
-    "    return tf_idf_map * idf_scores, tf_idf_map, idf_scores"
+    "    return tf_map * idf_scores, tf_map, idf_scores"
    ]
   },
   {
